--- a/templates/manager.html
+++ b/templates/manager.html
@@ -1,6 +1,7 @@
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">{{ name }}</h2>
+<div class="card employee-card" style="margin: 20px">
+    <div class="card-header" style="font-family:'Montserrat Subrayada', sans-serif; background-color: rgb(23, 149, 180);
+    color: rgb(10, 55, 92)">
+        <h2 class="card-title" style="font-family:'Montserrat Subrayada', sans-serif; ">{{ name }}</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>{{ role }}</h3>
     </div>
     <div class="card-body">
