--- a/templates/engineer.html
+++ b/templates/engineer.html
@@ -1,5 +1,7 @@
-<div class="card employee-card">
-    <div class="card-header">
+
+<div class="card employee-card" style="margin: 20px">
+    <div class="card-header"style="font-family:'Montserrat Subrayada', sans-serif; background-color: rgb(23, 149, 180);
+    color: rgb(10, 55, 92)">
         <h2 class="card-title">{{ name }}</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>{{ role }}</h3>
     </div>
