--- a/templates/engineer.html
+++ b/templates/engineer.html
@@ -1,5 +1,5 @@
-
-<div class="card employee-card" style="margin: 20px">
+<div class="col-md-4" style="flex-direction: column; justify-items: center; justify-content: space-around;">
+<div class="card employee-card" >
     <div class="card-header"style="font-family:'Montserrat Subrayada', sans-serif; background-color: rgb(23, 149, 180);
     color: rgb(10, 55, 92)">
         <h2 class="card-title">{{ name }}</h2>
@@ -12,4 +12,5 @@
             <li class="list-group-item">GitHub: <a href="https://github.com/{{ github }}" target="_blank" rel="noopener noreferrer">{{ github }}</a></li>
         </ul>
     </div>
+</div>
 </div>
