--- a/templates/intern.html
+++ b/templates/intern.html
@@ -1,4 +1,5 @@
-<div class="card employee-card" style="margin: 20px">
+<div class="col-md-4" style="flex-direction: column; justify-items: right; justify-content: space-around;">
+<div class="card employee-card" >
     <div class="card-header" style="font-family:'Montserrat Subrayada', sans-serif; background-color: rgb(23, 149, 180);
     color: rgb(10, 55, 92)">
         <h2 class="card-title" style="font-family:'Montserrat Subrayada', sans-serif" >{{ name }}</h2>
@@ -13,4 +14,5 @@
     </div>
 </div>
 <div class="row">
+</div>
 </div>
