--- a/templates/main.html
+++ b/templates/main.html
@@ -29,10 +29,9 @@
     background-size: 100%">
     <div class="container">
         <div class="row">
-            <div class="team-area col-12">
+            <div class="team-area col-12 d-flex" style="flex-flow: wrap; justify-content: space-around;">
                 {{ team }}
             </div>
-
         </div>
     </div>
 </div>
