--- a/templates/manager.html
+++ b/templates/manager.html
@@ -1,4 +1,5 @@
-<div class="card employee-card" style="margin: 20px">
+<div class="col-md-4"style="flex-direction: column; justify-items: left; justify-content: space-around;">
+<div class="card employee-card" >
     <div class="card-header" style="font-family:'Montserrat Subrayada', sans-serif; background-color: rgb(23, 149, 180);
     color: rgb(10, 55, 92)">
         <h2 class="card-title" style="font-family:'Montserrat Subrayada', sans-serif; ">{{ name }}</h2>
@@ -11,4 +12,5 @@
             <li class="list-group-item">Office number: {{ officeNumber }}</li>
         </ul>
     </div>
+</div>
 </div>
