--- a/templates/main.html
+++ b/templates/main.html
@@ -29,7 +29,7 @@
     background-size: 100%">
     <div class="container">
         <div class="row">
-            <div class="team-area col-12 d-flex" style="flex-flow: wrap; justify-content: space-around;">
+            <div class="team-area col-12 d-flex" style="flex-flow: wrap;">
                 {{ team }}
             </div>
         </div>
