--- a/templates/manager.html
+++ b/templates/manager.html
@@ -1,4 +1,4 @@
-<div class="col-md-4"style="flex-direction: column; justify-items: left; justify-content: space-around;">
+<div class="col-md-4"style="flex-wrap: wrap;">
 <div class="card employee-card" >
     <div class="card-header" style="font-family:'Montserrat Subrayada', sans-serif; background-color: rgb(23, 149, 180);
     color: rgb(10, 55, 92)">
